--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -3,6 +3,7 @@
   "source": "https://github.com/Zsoltt-dom/MiTempHum-Homey",
   "version": "1.1.0",
   "compatibility": ">=5.0.0",
+  "support": "mailto:zsolt@reinhardt.es",
   "sdk": 3,
   "platforms": [
     "local"
