--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,7 +1,7 @@
 {
   "id": "hu.corenet.mitemp",
   "source": "https://github.com/Zsoltt-dom/MiTempHum-Homey",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "compatibility": ">=5.0.0",
   "support": "mailto:zsolt@reinhardt.es",
   "sdk": 3,
@@ -17,7 +17,9 @@
   "category": [
     "climate"
   ],
-  "permissions": ["homey:wireless:ble"],
+  "permissions": [
+    "homey:wireless:ble"
+  ],
   "images": {
     "small": "/assets/images/small.png",
     "large": "/assets/images/large.png",
