--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "hu.corenet.mitemp",
   "source": "https://github.com/Zsoltt-dom/MiTempHum-Homey",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "compatibility": ">=5.0.0",
   "support": "mailto:zsolt@reinhardt.es",
   "sdk": 3,
@@ -93,6 +93,61 @@
         }
       ],
       "id": "xiaomi-thermometer-ble"
+    },
+    {
+      "name": {
+        "en": "Thermometer and Hygrometer (Zigbee)"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "measure_battery",
+        "measure_humidity",
+        "measure_temperature"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "zigbee"
+      ],
+      "images": {
+        "small": "/drivers/xiaomi-thermometer-zigbee/assets/images/small.png",
+        "large": "/drivers/xiaomi-thermometer-zigbee/assets/images/large.png",
+        "xlarge": "/drivers/xiaomi-thermometer-zigbee/assets/images/xlarge.png"
+      },
+      "zigbee": {
+        "manufacturerName": "Xiaomi",
+        "productId": [
+          "LYWSD03MMC"
+        ],
+        "endpoints": {
+          "1": {
+            "clusters": [
+              0,
+              1,
+              1026,
+              1029
+            ],
+            "bindings": [
+              1,
+              1026,
+              1029
+            ]
+          }
+        },
+        "learnmode": {
+          "image": "/drivers/my_driver/assets/learnmode.svg",
+          "instruction": {
+            "en": "Short the GND and Reset contacts (in the battery compartment) for 3 seconds."
+          }
+        }
+      },
+      "energy": {
+        "batteries": [
+          "CR2032"
+        ]
+      },
+      "id": "xiaomi-thermometer-zigbee"
     }
   ]
 }
