--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "@types/node": "^17.0.23",
     "eslint": "^7.32.0",
     "eslint-config-athom": "^3.0.1"
+  },
+  "dependencies": {
+    "homey-zigbeedriver": "^2.1.2",
+    "zigbee-clusters": "^2.3.0"
   }
 }
